apply plugin: 'java'

sourceCompatibility = 1.8
targetCompatibility = 1.8
compileJava.options.encoding = 'UTF-8'

repositories {
    mavenCentral()
}

dependencies {
    compile "org.apache.logging.log4j:log4j-core-its:2.+"
	testCompile "junit:junit:4.12"
}

jar {
    baseName = 'jhash'
    version =  '1.0'
}